// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem Should render MenuItem without description and icon 1`] = `
<a
  class="MenuItem"
>
  <span
    class="MenuItem-Title"
  >
    This is MenuItem title
  </span>
</a>
`;

exports[`MenuItem Should render full MenuItem 1`] = `
<a
  class="MenuItem"
>
  <span
    class="MenuItem-Title"
  >
    This is MenuItem title
  </span>
  <span
    class="MenuItem-Icon"
  >
    <span>
      anyIcon
    </span>
  </span>
  <span
    class="MenuItem-Description"
  >
    This is MenuItem test description
  </span>
</a>
`;
